<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.foreach.across</groupId>
		<artifactId>across-application-parent</artifactId>
		<version>5.1.0.RELEASE</version>
		<relativePath/>
	</parent>

	<groupId>org.lamisplus.modules</groupId>
	<artifactId>client-sync</artifactId>
	<version>2.1.8.1</version>
	<packaging>jar</packaging>
	<description>Central Sync Module</description>

	<properties>
		<java.version>1.8</java.version>
		<mapstruct.version>1.4.2.Final</mapstruct.version>
		<org.projectlombok.version>1.16.4</org.projectlombok.version>
		<jjwt.version>0.11.2</jjwt.version>
		<build.revision>1.0.0</build.revision>
		<audit4j.version>2.5.0</audit4j.version>
		<maven.lamisplus-baseui.skip>true</maven.lamisplus-baseui.skip>
		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
	</properties>

	<dependencyManagement>
		<dependencies>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>foreach-nexus</id>
			<name>Foreach nexus</name>
			<url>https://repository.foreach.be/nexus/repository/public/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.foreach.across</groupId>
			<artifactId>across-test</artifactId>
			<exclusions>
				<exclusion>
					<groupId>com.foreach.across</groupId>
					<artifactId>across-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.foreach.across</groupId>
			<artifactId>across-autoconfigure</artifactId>
			<exclusions>
				<exclusion>
					<groupId>com.foreach.across.modules</groupId>
					<artifactId>across-hibernate-module</artifactId>
				</exclusion>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.9.0</version>
		</dependency>

		<dependency>
			<groupId>org.lamisplus.modules</groupId>
			<artifactId>base-module</artifactId>
			<version>2.0.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>io.github.resilience4j</groupId>
			<artifactId>resilience4j-spring-boot2</artifactId>
			<version>1.7.1</version>
		</dependency>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.0.10.Final</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>2.8.0</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>2.8.0</version>
		</dependency>

		<dependency>
			<groupId>com.vladmihalcea</groupId>
			<artifactId>hibernate-types-52</artifactId>
			<version>2.8.0</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.4.0.Final</version>
		</dependency>

		<!--<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>3.14.9</version>
		</dependency>-->

		<dependency>
			<groupId>io.github.jhipster</groupId>
			<artifactId>jhipster-framework</artifactId>
			<version>3.9.1</version>
		</dependency>

		<dependency>
			<groupId>com.foreach.across.modules</groupId>
			<artifactId>across-hibernate-module</artifactId>
		</dependency>

		<dependency>
			<groupId>org.lamisplus.modules</groupId>
			<artifactId>patient</artifactId>
			<version>2.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.lamisplus.modules</groupId>
			<artifactId>laboratory</artifactId>
			<version>2.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.lamisplus.modules</groupId>
			<artifactId>hiv</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>org.lamisplus.modules</groupId>
			<artifactId>triage</artifactId>
			<version>2.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.lamisplus.modules</groupId>
			<artifactId>biometric</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.lamisplus.modules</groupId>
			<artifactId>prep</artifactId>
			<version>2.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<!--		<dependency>-->
		<!--			<groupId>net.lingala.zip4j</groupId>-->
		<!--			<artifactId>zip4j</artifactId>-->
		<!--			<version>2.11.5</version>-->
		<!--		</dependency>-->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Build-Time>${maven.build.timestamp}</Build-Time>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<!--<plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>-->
			<plugin>
				<groupId>com.github.eirslett</groupId>
				<artifactId>frontend-maven-plugin</artifactId>
				<version>1.12.1</version>
				<executions>
					<!--						<execution>-->
					<!--							<id>install node and npm</id>-->
					<!--							<goals>-->
					<!--								<goal>install-node-and-npm</goal>-->
					<!--							</goals>-->
					<!--							<configuration>-->
					<!--								<nodeVersion>v16.13.2</nodeVersion>-->
					<!--								<npmVersion>8.1.2</npmVersion>-->
					<!--							</configuration>-->
					<!--						</execution>-->
					<!--						<execution>-->
					<!--							<id>npm install</id>-->
					<!--							<goals>-->
					<!--								<goal>npm</goal>-->
					<!--							</goals>-->
					<!--							<configuration>-->
					<!--								<arguments>install</arguments>-->
					<!--							</configuration>-->
					<!--						</execution>-->
					<!--<execution>
                        <id>npm run build</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <configuration>
                            <arguments>run build</arguments>
                        </configuration>
                    </execution>-->
				</executions>
			</plugin>
		</plugins>
	</build>
</project>